Moved coverage to linux; run coverage with pytest.

--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -27,8 +27,10 @@ jobs:
 
   - script: |
       pip install pytest pytest-azurepipelines
-      pytest
-    displayName: 'pytest'
+      coverage run -m pytest  # Run the tests and check for test coverage.
+      coverage report -m  # Generate test coverage report.
+      codecov  # Upload the report to codecov.
+    displayName: 'pytest and coverage'
 
   - script: |
       make -C docs html  # Build the documentation.
