--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -19,6 +19,7 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
         pip install -r requirements-opt.txt
+        pip install nbmake==0.5 pytest-xdist
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -26,6 +27,9 @@ jobs:
     - name: Test with pytest
       run: |
         pytest --log-cli-level=10
+    - name: Test notebooks.
+      run: |
+        pytest --nbmake -n=auto examples --ignore=examples/verification
     - name: Build a distribution if tagged
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       run: |
