--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -19,6 +19,7 @@ jobs:
         python -m pip install -r requirements.txt
         python -m pip install -r requirements-dev.txt
         python -m pip install -r requirements-opt.txt
+        python -m pip install .
         python -m pip install nbmake==0.5 pytest-xdist line_profiler  # add'l packages for notebook tests.
     - name: Lint with flake8
       run: |
@@ -27,6 +28,8 @@ jobs:
     - name: Test with pytest
       run: |
         pytest --log-cli-level=10
+    - name: Test notebooks.
+      run: |
         pytest --nbmake -n=auto examples --ignore=examples/verification
     - name: Build a distribution if tagged
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
