--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,7 +20,8 @@ jobs:
         python -m pip install -r requirements-dev.txt
         python -m pip install .
         python -m pip install nbmake==0.10 pytest-xdist line_profiler  # add'l packages for notebook tests.
-    - name: Lint with flake8
+    - name: Lint with flake8 for pull requests
+      if: github.event_name == 'pull_request'
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 .
