--- a/andes/io/psse-dyr.yaml
+++ b/andes/io/psse-dyr.yaml
@@ -1081,25 +1081,25 @@ REGCA1:
                 src: Sn
                 idx: gen
     outputs:
-        - u: u
-        - bus: BUS
-        - gen: gen
-        - Sn: Sn
-        - Tg: Tg
-        - Rrpwr: Rrpwr
-        - Brkpt: Brkpt
-        - Zerox: Zerox
-        - Lvplsw: Lvplsw
-        - Lvpl1: Lvpl1
-        - Volim: Volim
-        - Lvpnt1: Lvpnt1
-        - Lvpnt0: Lvplt0
-        - Iolim: Iolim
-        - Tfltr: Tfltr
-        - Khv: Khv
-        - Iqrmax: Iqrmax
-        - Iqrmin: Iqrmin
-        - Accel: Accel
+        u: u
+        bus: BUS
+        gen: gen
+        Sn: Sn
+        Tg: Tg
+        Rrpwr: Rrpwr
+        Brkpt: Brkpt
+        Zerox: Zerox
+        Lvplsw: Lvplsw
+        Lvpl1: Lvpl1
+        Volim: Volim
+        Lvpnt1: Lvpnt1
+        Lvpnt0: Lvpnt0
+        Iolim: Iolim
+        Tfltr: Tfltr
+        Khv: Khv
+        Iqrmax: Iqrmax
+        Iqrmin: Iqrmin
+        Accel: Accel
 
 REECA1:
     destination: REECA1
@@ -1166,65 +1166,65 @@ REECA1:
             RenGen:
                 bus: BUS
     outputs:
-        - reg: reg
-        - busr: BUSR
-        - PFFLAG: PFFLAG
-        - VFLAG: VFLAG
-        - QFLAG: QFLAG
-        - PFLAG: PFLAG
-        - PQFLAG: PQFLAG
-        - Vdip: Vdip
-        - Vup: Vup
-        - Trv: Tru
-        - dbd1: dbd1
-        - dbd2: dbd2
-        - Kqv: Kqv
-        - Iqh1: Iqh1
-        - Iql1: Iql1
-        - Vref0: Vref0
-        - Iqfrz: Iqfrz
-        - Thld: Thld
-        - Thld2: Thld2
-        - Tp: Tp
-        - QMax: QMax
-        - QMin: QMin
-        - VMAX: VMAX
-        - VMIN: VMIN
-        - Kqp: Kqp
-        - Kqi: Kqi
-        - Kvp: Kvp
-        - Kvi: Kvi
-        - Vbias: Vref1 # TODO: double check
-        - Tiq: Tiq
-        - dPmax: dPmax
-        - dPmin: dPmin
-        - PMAX: PMAX
-        - PMIN: PMIN
-        - Imax: Imax
-        - Tprod: Tprod
-        - Vq1: Vq1
-        - Iq1: Iq1
-        - Vq2: Vq2
-        - Iq2: Iq2
-        - Vq3: Vq3
-        - Iq3: Iq3
-        - Vq4: Vq4
-        - Iq4: Iq4
-        - Vp1: Vp1
-        - Ip1: Ip1
-        - Vp2: Vp2
-        - Ip2: Ip2
-        - Vp3: Vp3
-        - Ip3: Ip3
-        - Vp4: Vp4
-        - Ip4: Ip4
+        reg: reg
+        busr: BUSR
+        PFFLAG: PFFLAG
+        VFLAG: VFLAG
+        QFLAG: QFLAG
+        PFLAG: PFLAG
+        PQFLAG: PQFLAG
+        Vdip: Vdip
+        Vup: Vup
+        Trv: Trv
+        dbd1: dbd1
+        dbd2: dbd2
+        Kqv: Kqv
+        Iqh1: Iqh1
+        Iql1: Iql1
+        Vref0: Vref0
+        Iqfrz: Iqfrz
+        Thld: Thld
+        Thld2: Thld2
+        Tp: Tp
+        QMax: QMax
+        QMin: QMin
+        VMAX: VMAX
+        VMIN: VMIN
+        Kqp: Kqp
+        Kqi: Kqi
+        Kvp: Kvp
+        Kvi: Kvi
+        Vref1: Vbias # TODO: double check
+        Tiq: Tiq
+        dPmax: dPmax
+        dPmin: dPmin
+        PMAX: PMAX
+        PMIN: PMIN
+        Imax: Imax
+        Tprod: Tprod
+        Vq1: Vq1
+        Iq1: Iq1
+        Vq2: Vq2
+        Iq2: Iq2
+        Vq3: Vq3
+        Iq3: Iq3
+        Vq4: Vq4
+        Iq4: Iq4
+        Vp1: Vp1
+        Ip1: Ip1
+        Vp2: Vp2
+        Ip2: Ip2
+        Vp3: Vp3
+        Ip3: Ip3
+        Vp4: Vp4
+        Ip4: Ip4
 
 REPCA1:
     destination: REPCA1
     inputs:
         - BUS
         - ID
-        - BUSN
+        - BUSR
         - BUS1
         - BUS2
         - CKTID
@@ -1274,40 +1274,40 @@ REPCA1:
                 bus1: BUS1
                 bus2: BUS2  # TODO: CKTID is not used
     outputs:
-        - ree: ree
-        - line: line
-        - busr: BUSR
-        - VCFlag: VCFlag
-        - RefFlag: RefFlag
-        - Fflag: Fflag
-        - PLflag: "Fflag; lambda: 1"
-        - Tfltr: Tfltr
-        - Kp: Kp
-        - Ki: Ki
-        - Tft: Tft
-        - Tfv: Tfv
-        - Vfrz: Vfrz
-        - Rc: Rc
-        - Xc: Xc
-        - Kc: Kc
-        - emax: emax
-        - emin: emin
-        - dbd1: dbd1
-        - dbd2: dbd2
-        - Qmax: Qmax
-        - Qmin: Qmin
-        - Kpg: Kpg
-        - Kig: Kig
-        - Tp: Tp
-        - fdbd1: fdbd1
-        - fdbd2: fdbd2
-        - femax: femax
-        - femin: femin
-        - Pmax: Pmax
-        - Pmin: Pmin
-        - Tg: Tg
-        - Ddn: Ddn
-        - Dup: Dup
+        ree: ree
+        line: line
+        busr: "REPCA1.BUSR; lambda x: [None if (i == 0) else i for i in x]"
+        VCFlag: VCFlag
+        RefFlag: RefFlag
+        Fflag: Fflag
+        PLflag: "Fflag; lambda x: 1"
+        Tfltr: Tfltr
+        Kp: Kp
+        Ki: Ki
+        Tft: Tft
+        Tfv: Tfv
+        Vfrz: Vfrz
+        Rc: Rc
+        Xc: Xc
+        Kc: Kc
+        emax: emax
+        emin: emin
+        dbd1: dbd1
+        dbd2: dbd2
+        Qmax: Qmax
+        Qmin: Qmin
+        Kpg: Kpg
+        Kig: Kig
+        Tp: Tp
+        fdbd1: fdbd1
+        fdbd2: fdbd2
+        femax: femax
+        femin: femin
+        Pmax: Pmax
+        Pmin: Pmin
+        Tg: Tg
+        Ddn: Ddn
+        Dup: Dup
 
 WTDTA1:
     destination: WTDTA1
@@ -1324,11 +1324,11 @@ WTDTA1:
             RenExciter:
                 bus: BUS
     outputs:
-        - ree: ree
-        - Ht: "H, Htfract; lambda (x, y): x * y"
-        - Hg: "H, Htfract; lambda (x, y): x * (1-y)"
-        - Dshaft: Dshaft
-        - Kshaft: "H, Htfract, Freq1, sys_f: lambda (H, Htfract, Freq1, sys_f): 2 * (H*Htfract) * (H*(1-Htfract)) * 2 * pi * freq1*freq1 / H / sys_f"
+        ree: ree
+        Ht: "WTDTA1.H,WTDTA1.Htfract; lambda x, y: x * y"
+        Hg: "WTDTA1.H,WTDTA1.Htfract; lambda x, y: x * (1-y)"
+        Dshaft: Dshaft
+        Kshaft: "WTDTA1.H,WTDTA1.Htfract,WTDTA1.Freq1; lambda H, Htfract, Freq1: 2 * (H*Htfract) * (H*(1-Htfract)) * 2 * 3.141592653 * Freq1*Freq1 / H / 60"
 
 WTARA1:
     destination: WTARA1
@@ -1443,24 +1443,24 @@ WTTQA1:
             RenPitch:
                 rea: rea
     outputs:
-        - rep: rep
-        - Kip: Kip
-        - Tflag: Tflag
-        - Kpp: Kpp
-        - Kip: Kip
-        - Tp: Tp
-        - Twref: Twref
-        - Temax: Temax
-        - Temin: Temin
-        - p1: p1
-        - spd1: spd1
-        - p2: p2
-        - spd2: spd2
-        - p3: p3
-        - spd3: spd3
-        - p4: p4
-        - spd4: spd4
-        - TRATE: Tn
+        rep: rep
+        Kip: Kip
+        Tflag: Tflag
+        Kpp: Kpp
+        Kip: Kip
+        Tp: Tp
+        Twref: Twref
+        Temax: Temax
+        Temin: Temin
+        p1: p1
+        spd1: spd1
+        p2: p2
+        spd2: spd2
+        p3: p3
+        spd3: spd3
+        p4: p4
+        spd4: spd4
+        TRATE: Tn
 
 # === Custom Models ===
 Toggler:
