--- a/andes/io/psse-dyr.yaml
+++ b/andes/io/psse-dyr.yaml
@@ -1329,7 +1329,7 @@ WTDTA1:
         Ht: "WTDTA1.H,WTDTA1.Htfrac; lambda x, y: x * y"
         Hg: "WTDTA1.H,WTDTA1.Htfrac; lambda x, y: x * (1-y)"
         Dshaft: Dshaft
-        Kshaft: "WTDTA1.H,WTDTA1.Htfrac,WTDTA1.Freq1; lambda H, Htfrac, Freq1: 2 * (H*Htfrac) * (H*(1-Htfrac)) * 4 * 3.141592653 * 3.141592653 * Freq1*Freq1 / H"
+        Kshaft: "WTDTA1.H,WTDTA1.Htfrac,WTDTA1.Freq1; lambda H, Htfrac, Freq1: 2 * (H*Htfrac) * (H*(1-Htfrac)) * (2 * 3.141592653 * Freq1 / 60 ) ** 2 / H"
 
 WTARA1:
     destination: WTARA1
