--- a/.gitignore
+++ b/.gitignore
@@ -67,8 +67,7 @@ docs/source/examples
 docs/build/
 docs/jupyter_execute/
 docs/source/_build/
-docs/source/generated/
-docs/source/_autosummary/
+docs/source/_generated/
 
 # pytest
 .pytest_cache/
