--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,7 +11,7 @@ python:
   version: 3.8
   install:
     - requirements: requirements.txt
-    - requirements: requirements-rtd.txt
+    - requirements: requirements-dev.txt
     - method: pip
       path: .
       extra_requirements:
