Pin pytest version to fix error: ``` pluggy._manager.PluginValidationError: unknown hook 'pytest_warning_captured' in plugin <module 'pytest_azurepipelines' from 'C:\\Miniconda\\envs\\andesEnv\\lib\\site-packages\\pytest_azurepipelines.py'> Result Attachments will be stored in LogStore ```

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,7 @@
 # the documentation) but not necessarily required for _using_ it.
 codecov
 coverage
-pytest
+pytest==7.0.1
 flake8
 sphinx
 # These are dependencies of various sphinx extensions for documentation.
