--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -18,7 +18,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
         python -m pip install -r requirements-dev.txt
-        python -m pip install .
+        python -m pip install .[interop]
         python -m pip install nbmake==0.10 pytest-xdist line_profiler  # add'l packages for notebook tests.
     - name: Lint with flake8 for pull requests
       if: github.event_name == 'pull_request'
