--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,6 +15,8 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        # work around a pip issue with extras_require: https://github.com/pypa/pip/issues/8323
+        python -m pip install -U "pip @ git+https://github.com/pypa/pip.git"
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
         python -m pip install -r requirements-dev.txt
