Moved dev deps to `requirements-extra`.

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,11 +11,10 @@ python:
   version: 3.8
   install:
     - requirements: requirements.txt
-    - requirements: requirements-dev.txt
     - method: pip
       path: .
       extra_requirements:
-        - docs
+        - doc
     - method: setuptools
       path: .
   system_packages: true
