--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -21,8 +21,7 @@ jobs:
 
   - script: |
       python -m pip install --upgrade pip
-      pip install .
-      pip install -r requirements-dev.txt
+      pip install .[dev,interop]
     displayName: 'Install dependencies'
 
   - script: |
