--- a/.azure-pipelines/azure-pipelines-macos.yml
+++ b/.azure-pipelines/azure-pipelines-macos.yml
@@ -21,8 +21,7 @@ jobs:
 
   - script: |
       python -m pip install --upgrade pip
-      pip install .
-      pip install -r requirements-dev.txt
+      pip install .[all]
     displayName: 'Install dependencies'
 
   - script: |
