--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -29,8 +29,7 @@ jobs:
       call activate andesEnv
       python -m pip install --upgrade pip
       pip install pytest pytest-azurepipelines
-      pip install .
-      pip install -r requirements-dev.txt
+      pip install .[dev,interop]
       pytest
     displayName: pytest
 
