--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ include CONTRIBUTING.rst
 include LICENSE
 include README.md
 include requirements.txt
-include extra-requirements.txt
+include requirements-extra.txt
 
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
