Add `ipywidget` to the `web` group.

--- a/requirements-extra.txt
+++ b/requirements-extra.txt
@@ -20,3 +20,5 @@ myst-nb#                      dev, doc
 pre-commit#                   dev
 
 pandapower#                   interop
+
+ipywidgets#                   web
