--- a/.pylintrc
+++ b/.pylintrc
@@ -142,7 +142,8 @@ disable=print-statement,
         no-member,
         too-few-public-methods,
         too-many-instance-attributes,
-        invalid-name
+        invalid-name,
+        unnecessary-pass
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
